cabal-version:      3.4
name:               aoc-utils
version:            0.1.0.0
synopsis:           Utilities for solving Advent of Code puzzles.
license:            MIT
author:             Abizer Nasir
maintainer:         abizern@mac.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    
common build
    ghc-options: -Wall -O2

library
    import:           build
    exposed-modules:
        AOCUtils.Hash
        AOCUtils.Lists
        AOCUtils.Input
        AOCUtils.Points
        AOCUtils.Strings
    other-extensions: OverloadedStrings

    build-depends:
                  base ^>=4.19.0.0,
                  base16-bytestring,
                  bytestring,
                  cryptohash-md5,
                  split >= 0.2.4

    hs-source-dirs:   lib
    default-language: Haskell2010